apps/overlays/production/adguard/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
spec:
  rules:
    - host: adguard.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3080
    - host: adguard.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3080
